--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- Font awesome and google fonts -->
+    <script src="https://kit.fontawesome.com/9535d473d7.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@300&family=Source+Sans+Pro:wght@300&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 
-    <title>Document</title>
+    <title>Rock Paper Scissors Lizard Spock</title>
 </head>
 <body>
+    <header>
+        
     
 
 
