--- a/index.html
+++ b/index.html
@@ -13,7 +13,23 @@
     <title>Rock Paper Scissors Lizard Spock</title>
 </head>
 <body>
-    <header>
+    <header class="heading">
+        <h1>Rock, Paper, Scissors, Lizard, Spock</h1>
+        <h2>A new varient of rock, paper and scissors</h2>
+    </header>
+
+    <section class="Gamer1-area">
+        <div>
+            <h3>Gamer 1</h3>
+            <p>Make a choise</p>
+
+        </div>
+        <div class="score-area">
+            <p class="result-gamer1">Results: <span id="results-1">0</span></p>
+
+        </div>
+    </section>
+
         
     
 
