add more css and html structure

--- a/index.html
+++ b/index.html
@@ -49,12 +49,14 @@
 <section>
         <div class="Gamer2-area">
             <h3>Computer</h3>
+            <p>Computer will random</p>
         <div class="computer-gamer">
             <i class="fa-solid fa-hand-back-fist"></i>
             <i class="fa-solid fa-hand"></i>
             <i class="fa-solid fa-hand-scissors"></i>
             <i class="fa-solid fa-hand-lizard"></i>
             <i class="fa-solid fa-hand-spock"></i>
+        </div>
             <div class="score-area2">
                 <p class="result-gamer2">Computer results: <span id="results-2">0</span></p>
 
