add more css and html structure

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="Gamer1-area">
         <div>
             <h3>Gamer 1</h3>
-            <h3>Make a choise:</h3>
+            <h3>Gamer make a choise</h3>
             <div class="gamer-buttons">
                 <button aria-label="Rock" class="control" data-choice="0">
                     <i class="fa-solid fa-hand-back-fist"></i>
@@ -49,13 +49,18 @@
 <section>
         <div class="Gamer2-area">
             <h3>Computer</h3>
-            <p>Computer will random</p>
+            <h3>Computer will random</h3>
         <div class="computer-gamer">
-            <i class="fa-solid fa-hand-back-fist"></i>
-            <i class="fa-solid fa-hand"></i>
-            <i class="fa-solid fa-hand-scissors"></i>
-            <i class="fa-solid fa-hand-lizard"></i>
-            <i class="fa-solid fa-hand-spock"></i>
+            <button><i class="fa-solid fa-hand-back-fist"></i>
+            </button>
+            <button><i class="fa-solid fa-hand"></i>
+            </button>
+            <button><i class="fa-solid fa-hand-scissors"></i>
+            </button>
+            <button><i class="fa-solid fa-hand-lizard"></i>
+            </button>
+            <button><i class="fa-solid fa-hand-spock"></i>
+            </button>
         </div>
             <div class="score-area2">
                 <p class="result-gamer2">Computer results: <span id="results-2">0</span></p>
