add some javascript structure

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 
 <section class="results-total">
         <div>
-            <p>Gamer 1 chose:<span class="gamer1-choosen">0</span></p>
-            <p>Computer chose:<span class="computer-choosen">0</span></p>
-            <p>Winner is <span class="winner-is">0</span></p>
+            <p>Gamer 1 chose:<span id="gamer1-choosen">0</span></p>
+            <p>Computer chose:<span id="computer-choosen">0</span></p>
+            <p>Winner is <span id="winner-is">0</span></p>
         </div>
     </section>
     <footer>
