add script structure to test

--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
             <h3>Gamer 1</h3>
             <h3>Gamer make a choise</h3>
             <div class="gamer-buttons">
-                <button aria-label="Rock" class="control" data-choice="0">
+                <button aria-label="Rock" class="controls" data-choice="0">
                     <i class="fa-solid fa-hand-back-fist"></i>
                 </button>
-                <button aria-label="Paper" class="control" data-choice="1">
+                <button aria-label="Paper" class="controls" data-choice="1">
                     <i class="fa-solid fa-hand"></i>
                 </button>
-                <button aria-label="Scissors" class="control" data-choice="2">
+                <button aria-label="Scissors" class="controls" data-choice="2">
                     <i class="fa-solid fa-hand-scissors"></i>
                 </button>
-                <button aria-label="Lizard" class="control" data-choice="3">
+                <button aria-label="Lizard" class="controls" data-choice="3">
                     <i class="fa-solid fa-hand-lizard"></i>
                 </button>
-                <button aria-label="Spock" class="control" data-choice="4">
+                <button aria-label="Spock" class="controls" data-choice="4">
                     <i class="fa-solid fa-hand-spock"></i>
                 </button>
             </div>
@@ -73,9 +73,9 @@
 
 <section class="results-total">
         <div>
-            <p>Gamer 1 chose:<span id="gamer1-choosen">0</span></p>
-            <p>Computer chose:<span id="computer-choosen">0</span></p>
-            <p>Winner is <span id="winner-is">0</span></p>
+            <p>Gamer 1 chose:<span id="gamer1-choosen"></span></p>
+            <p>Computer chose:<span id="computer-choosen"></span></p>
+            <p>Winner is <span id="winner-is"></span></p>
         </div>
     </section>
     <footer>
