--- a/index.html
+++ b/index.html
@@ -24,26 +24,17 @@
             <h3>Gamer 1</h3>
             <h3>Gamer make a choise</h3>
             <div class="gamer-buttons">
-                <button aria-label="Rock" class="controls" data-choice="0">
-                    <i class="fa-solid fa-hand-back-fist"></i>
-                </button>
-                <button aria-label="Paper" class="controls" data-choice="1">
-                    <i class="fa-solid fa-hand"></i>
-                </button>
-                <button aria-label="Scissors" class="controls" data-choice="2">
-                    <i class="fa-solid fa-hand-scissors"></i>
-                </button>
-                <button aria-label="Lizard" class="controls" data-choice="3">
-                    <i class="fa-solid fa-hand-lizard"></i>
-                </button>
-                <button aria-label="Spock" class="controls" data-choice="4">
-                    <i class="fa-solid fa-hand-spock"></i>
-                </button>
+                <button aria-label="Rock" data-choice="0" class="control">rock</button>
+                <button aria-label="Paper" data-choice="1" class="control">Paper</button>
+                <button aria-label="Scissors" data-choice="2" class="control">Scissors</button>
+                <button aria-label="Lizard" data-choice="3" class="control">Lizard</button>
+                <button aria-label="Spock" data-choice="4" class="control">Spock</button>
             </div>
         </div>
         <div id="messages"></div>
         <div class="score-area1">
             <p class="result-gamer1">Results: <span id="results-1">0</span></p>
+            <button id="player-button" alt="Rock Paper Scissors Lizard Spock"></button>
         </div>
     </section>
 <section>
@@ -77,6 +68,7 @@
             <p>Computer chose:<span id="computer-choosen"></span></p>
             <p>Winner is <span id="winner-is"></span></p>
         </div>
+        <div class="result"></div>
     </section>
     <footer>
         <h3>Rules</h3>
@@ -89,6 +81,6 @@
     
 
 
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/scripttest.js"></script>
 </body>
 </html>
