added small html, css and js changes

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
         </div>
         <div id="messages"></div>
         <div class="score-area1">
-            <p class="result-gamer1">Results: <span id="gamer_result">0</span></p>
-            <button id="player-button" alt="Rock Paper Scissors Lizard Spock"></button>
+            <p class="result-gamer1">Results: <span id="gamer_result">0</span>/5</p>
         </div>
     </section>
 <section>
@@ -54,8 +53,7 @@
             </button>
         </div>
             <div class="score-area2">
-                <p class="result-gamer2">Computer results: <span id="comp_result">0</span></p>
-                <button id="computer-Button" alt="Rock Paper Scissors Lizard Spock"></button>
+                <p class="result-gamer2">Computer results: <span id="comp_result">0</span>/5</p>
 
 
         </div>
@@ -67,7 +65,7 @@
         <div>
             <p>Gamer 1 chose:<span id="gamer1-choosen"></span></p>
             <p>Computer chose:<span id="computer-choosen"></span></p>
-            <p>Winner is <span id="winner-is"></span></p>
+            <p>Winner is:<span id="winner-is"></span></p>
         </div>
         <p id="result"></p>
     </section>
