added swal script, for nicer popup button

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <h3>Gamer 1</h3>
             <h3>Gamer make a choise</h3>
             <div class="gamer-buttons">
-            <button class="control" title="Rock" onclick="clicked('Rock')"><i class="far fa-hand-rock"></i></button>
-            <button class="control" title="Paper" onclick="clicked('Paper')"><i class="far fa-hand-paper"></i></button>
-            <button class="control" title="Scissors" onclick="clicked('Scissors')"><i class="far fa-hand-scissors"></i></button>
-            <button class="control" title="Lizard" onclick="clicked('Lizard')"><i class="far fa-hand-lizard"></i></button>
-            <button class="control" title="Spock" onclick="clicked('Spock')"><i class="far fa-hand-spock"></i></button>
+            <button title="Rock" onclick="clicked('Rock')"><i class="far fa-hand-rock"></i></button>
+            <button title="Paper" onclick="clicked('Paper')"><i class="far fa-hand-paper"></i></button>
+            <button title="Scissors" onclick="clicked('Scissors')"><i class="far fa-hand-scissors"></i></button>
+            <button title="Lizard" onclick="clicked('Lizard')"><i class="far fa-hand-lizard"></i></button>
+            <button title="Spock" onclick="clicked('Spock')"><i class="far fa-hand-spock"></i></button>
             </div>
         </div>
         <div id="messages"></div>
@@ -63,9 +63,9 @@
 
 <section class="results-total">
         <div>
-            <p>Gamer 1 chose:<span id="gamer1-choosen"></span></p>
-            <p>Computer chose:<span id="computer-choosen"></span></p>
-            <p>Winner is:<span id="winner-is"></span></p>
+            <p>Gamer 1 chose: <span id="gamer1-choosen"></span></p>
+            <p>Computer chose: <span id="computer-choosen"></span></p>
+            <p>Winner is: <span id="winner-is"></span></p>
         </div>
         <p id="result"></p>
     </section>
@@ -80,6 +80,7 @@
     
 
 
-    <script src="assets/js/scripttest2.js"></script>
+    <script src="assets/js/script.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 </html>
