fine tuning html and css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/9535d473d7.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@300&family=Source+Sans+Pro:wght@300&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 
-    <title>Rock Paper Scissors Lizard Spock</title>
+    <title>Rock, Paper, Scissors, Lizard, Spock</title>
 </head>
 <body>
     <header class="heading">
