--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="heading">
         <h1>Rock, Paper, Scissors, Lizard, Spock</h1>
-        <h2>A new varient of rock, paper and scissors</h2>
+        <h2>A new variant of rock, paper and scissors</h2>
         <img class="logo" src="assets/images/rock-paper-etc.ico.ico" alt="logo">
     </header>
 
