--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 <body>
     <header class="heading">
-        <h1>Rock, Paper, Scissors, Lizard, Spock</h1>
-        <h2>A new variant of rock, paper and scissors</h2>
+        <h1>Rock, Paper, Scissors, Lizard, Spock game</h1>
+        <h2>A new variant of the famous game rock, paper and scissors</h2>
         <img class="logo" src="assets/images/rock-paper-etc.ico.ico" alt="logo">
     </header>
 
