forgot aria-label

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <h3>Gamer 1</h3>
             <h3>Gamer make a choise</h3>
             <div class="gamer-buttons">
-            <button title="Rock" onclick="clicked('Rock')"><i class="far fa-hand-rock"></i></button>
-            <button title="Paper" onclick="clicked('Paper')"><i class="far fa-hand-paper"></i></button>
-            <button title="Scissors" onclick="clicked('Scissors')"><i class="far fa-hand-scissors"></i></button>
-            <button title="Lizard" onclick="clicked('Lizard')"><i class="far fa-hand-lizard"></i></button>
-            <button title="Spock" onclick="clicked('Spock')"><i class="far fa-hand-spock"></i></button>
+            <button aria-label="Rock" title="Rock" onclick="clicked('Rock')"><i class="far fa-hand-rock"></i></button>
+            <button aria-label="Paper" title="Paper" onclick="clicked('Paper')"><i class="far fa-hand-paper"></i></button>
+            <button aria-label="Scissors" title="Scissors" onclick="clicked('Scissors')"><i class="far fa-hand-scissors"></i></button>
+            <button aria-label="Lizard" title="Lizard" onclick="clicked('Lizard')"><i class="far fa-hand-lizard"></i></button>
+            <button aria-label="Spock" title="Spock" onclick="clicked('Spock')"><i class="far fa-hand-spock"></i></button>
             </div>
         </div>
         <div id="messages"></div>
